# network-monitor

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  SECURITY.md  TODO.md  temp
.github/workflows/: api-handler.yml  data-collector.yml  deploy-lambda.yml  deploy-ui.yml  enrich-metadata.yml  event-router.yml  send-notifications.yml  terraform.yml  track-presence.yml
.kiro/settings/: mcp.json
.kiro/steering/: behavior.md
data-collector/: Dockerfile  Makefile  pyproject.toml
data-collector/data_collector/: __init__.py  influxdb.py  main.py  mikrotik.py  models.py  openwrt.py  sqs.py
data-collector/tests/: __init__.py  test_influxdb.py  test_main.py  test_mikrotik.py  test_models.py  test_openwrt.py
docs/: api.md  architecture.md  changelog.md  deployment.md  event-types.md  grafana-setup.md
examples/: vector.toml
examples/grafana-dashboards/: device-presence-timeline.json  dhcp-activity.json  network-overview.json
lambdas/api_handler/: handler.py  pyproject.toml  test_handler.py
lambdas/enrich_metadata/: handler.py  pyproject.toml  test_handler.py
lambdas/event_router/: handler.py  handler.py.bak  pyproject.toml  test_handler.py
lambdas/send_notifications/: handler.py  pyproject.toml  test_handler.py
lambdas/track_presence/: handler.py  pyproject.toml  test_handler.py
scripts/: deploy_ui.sh
terraform/: acm.tf  api_gateway.tf  cloudfront.tf  dns.tf  dynamodb.tf  iam.tf  lambda.tf  main.tf  outputs.tf  providers.tf  remote-state.tf  s3.tf  sns_sqs.tf  ssm.tf  terraform.tfvars  variables.tf  vector_iam.tf
ui/: callback.html  index.html
(+2 files in other folders)
