[project]
name = "data-collector"
version = "0.1.0"
description = "MikroTik network device data collector for network-monitor"
authors = [{name = "Melvyn de Kort", email = "melvyn@mdekort.nl"}]
requires-python = ">=3.12"
dependencies = [
    "librouteros>=3.2",
    "boto3>=1.35",
    "urllib3>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "pytest-cov>=7.0",
    "pylint>=3.3",
    "ruff>=0.11",
]

[tool.hatch.build.targets.wheel]
packages = ["data_collector"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.pylint.format]
max-line-length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
