[project]
name = "network-monitor-api-handler"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "moto>=5.0.0",
]
