[project]
name = "network-monitor-send-notifications"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34.0",
    "urllib3>=2.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "moto>=5.0.0",
    "pylint>=3.3",
]

[tool.pylint.format]
max-line-length = 100
